docs: add documentation for list all projects
