# handler/projectHandler/listProjects.go
@@ -7,6 +7,16 @@ import (
 	"github.com/raulval/gofreela/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary List projects
+// @Description List all projects
+// @Tags Project
+// @Accept json
+// @Produce json
+// @Success 200 {object} ListProjectsResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /projects [get]
 func ListProjectsHandler(ctx *gin.Context) {
 	projects := []schemas.Project{}
 
